--- a/PodcastsPlayer/Views/PlayerDetailsView.xib
+++ b/PodcastsPlayer/Views/PlayerDetailsView.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -87,7 +88,7 @@
                                                 <constraint firstAttribute="width" constant="34" id="Qp5-Ny-OGt"/>
                                             </constraints>
                                             <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                            <state key="normal" image="pause">
+                                            <state key="normal" image="play">
                                                 <color key="titleColor" systemColor="labelColor"/>
                                             </state>
                                         </button>
@@ -242,10 +243,10 @@
                             <rect key="frame" x="0.0" y="761.5" width="366" height="32.5"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="muted_volume" translatesAutoresizingMaskIntoConstraints="NO" id="cba-hv-Bq1">
-                                    <rect key="frame" x="0.0" y="0.0" width="32.5" height="32.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="8.5" height="32.5"/>
                                 </imageView>
                                 <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="4kU-0y-kCn">
-                                    <rect key="frame" x="30.5" y="0.0" width="305" height="33.5"/>
+                                    <rect key="frame" x="6.5" y="0.0" width="329" height="33.5"/>
                                     <connections>
                                         <action selector="volumeChange:" destination="dGT-1E-Cmd" eventType="valueChanged" id="NMN-hl-07A"/>
                                     </connections>
@@ -292,7 +293,6 @@
         <image name="fastforward15" width="45.5" height="45.5"/>
         <image name="max_volume" width="32.5" height="32.5"/>
         <image name="muted_volume" width="32.5" height="32.5"/>
-        <image name="pause" width="57" height="57"/>
         <image name="play" width="59" height="59"/>
         <image name="rewind15" width="45.5" height="45.5"/>
         <systemColor name="labelColor">
